--- a/index.html
+++ b/index.html
@@ -575,28 +575,31 @@
                             Our Story
                         </button>
                         <button class="border-2 border-gray-300 text-gray-700 hover:bg-gray-50 px-6 py-3 rounded-md text-lg font-semibold transition duration-300">
-                            Meet the Team
-                        </button>
-                    </div>
-                </div>
-                <div class="relative">
-                    <div class="bg-blue-100 rounded-xl overflow-hidden h-80 md:h-96">
-                        <div class="absolute inset-0 flex items-center justify-center">
-                            <i class="fas fa-users text-blue-400 text-6xl"></i>
-                        </div>
-                    </div>
-                    <div class="absolute -bottom-6 -left-6 bg-white p-4 rounded-lg shadow-lg w-40">
-                        <div class="text-blue-600 font-bold text-3xl mb-1">10+</div>
-                        <div class="text-gray-600 text-sm">Geospatial Experts</div>
-                    </div>
-                    <div class="absolute -top-6 -right-6 bg-white p-4 rounded-lg shadow-lg w-40">
-                        <div class="text-blue-600 font-bold text-3xl mb-1">200+</div>
-                        <div class="text-gray-600 text-sm">Satisfied Clients</div>
-                    </div>
-                </div>
-            </div>
+Meet the Team
+    <section id="team" class="py-20 bg-white">
+      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <div class="text-center mb-16">
+          <h2 class="text-3xl md:text-4xl font-bold text-gray-900">Meet the Team</h2>
+          <p class="text-lg text-gray-600">Our leadership blends cutting-edge technology and local insight to deliver exceptional geospatial solutions.</p>
         </div>
+    
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-12 items-center">
+          <div class="text-center">
+            <img src="sibusiso_ginindza.webp" alt="Sibusiso Ginindza" class="mx-auto rounded-lg shadow-md w-60 h-auto">
+            <h3 class="text-xl font-bold mt-6 text-gray-800">Sibusiso Ginindza</h3>
+            <p class="text-blue-600 font-medium mb-4">Executive Director, iSpatial</p>
+            <p class="text-gray-600 text-sm text-left max-w-xl mx-auto">
+              Sibusiso Ginindza is a licensed drone pilot and Executive Director of iSpatial, Eswatini’s premier geospatial intelligence firm. With a strong background in GIS and UAV technologies, he leads the development and deployment of advanced spatial solutions to enhance decision-making in disaster risk management, urban planning, and environmental monitoring.
+              <br><br>
+              Ginindza’s pioneering work in hazard mapping—particularly in Lubombo, Manzini, and Peaks Peak—has elevated Eswatini’s capacity to assess and mitigate disaster risks. His integration of UAV-derived elevation models and high-resolution imagery supports both emergency response and long-term planning.
+              <br><br>
+              Collaborating with national institutions and global partners like the World Bank, he has contributed to Eswatini’s Composite Drought Index and national risk profiles. Ginindza also champions local capacity-building, training stakeholders in drone operations and GIS to ensure sustainable impact.
+            </p>
+          </div>
+        </div>
+      </div>
     </section>
+    
 
     <!-- CTA Section -->
     <section class="gradient-bg text-white py-20">
