--- a/index.html
+++ b/index.html
@@ -595,11 +595,9 @@ Meet the Team
         <h3 class="text-2xl font-bold text-gray-900">Sibusiso Ginindza</h3>
         <p class="text-blue-600 font-medium mb-4">Executive Director, iSpatial</p>
         <p class="text-gray-700 text-sm leading-relaxed">
-          Sibusiso Ginindza is a licensed drone pilot and Executive Director of iSpatial, Eswatini’s premier geospatial intelligence firm. With a strong background in GIS and UAV technologies, he leads the development and deployment of advanced spatial solutions to enhance decision-making in disaster risk management, urban planning, and environmental monitoring.
+          Sibusiso Ginindza is the Executive Director of iSpatial and a licensed drone pilot with extensive experience in GIS and UAV technologies. He leads the development of geospatial solutions that support disaster risk reduction, urban planning, and environmental monitoring in Eswatini.
           <br><br>
-          Ginindza’s pioneering work in hazard mapping—particularly in Lubombo, Manzini, and Peaks Peak—has elevated Eswatini’s capacity to assess and mitigate disaster risks. His integration of UAV-derived elevation models and high-resolution imagery supports both emergency response and long-term planning.
-          <br><br>
-          Collaborating with national institutions and global partners like the World Bank, he has contributed to Eswatini’s Composite Drought Index and national risk profiles. Ginindza also champions local capacity-building, training stakeholders in drone operations and GIS to ensure sustainable impact.
+          Ginindza’s work has been instrumental in advancing hazard mapping and elevating Eswatini’s early warning systems. He actively collaborates with national agencies and global partners to deliver innovative, data-driven insights.
         </p>
       </div>
     </div>
