--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="flex items-center">
                     <div class="flex-shrink-0 flex items-center">
                         <i class="fas fa-map-marked-alt text-blue-600 text-2xl mr-2"></i>
-                        <span class="text-3xl font-bold text-blue-600">iSpatial</span>
+                        <span class="text-3xl font-bold text-blue-600">iSpatialSZ</span>
                     </div>
                 </div>
                 <div class="hidden md:ml-6 md:flex md:items-center md:space-x-8">
